examples-generated/nat/v1alpha1/gateway.yaml
apiVersion: nat.alibabacloud.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: nat/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: default
  name: default
spec:
  forProvider:
    natGatewayName: ${var.name}
    natType: Enhanced
    paymentType: PayAsYouGo
    region: cn-beijing
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: default
    vswitchIdSelector:
      matchLabels:
        testing.upbound.io/example-name: default
